fixed production build error.

--- a/src/app/components/email-jobs/email-jobs.component.html
+++ b/src/app/components/email-jobs/email-jobs.component.html
@@ -28,7 +28,7 @@
                   </button>
                   <mat-menu #menu_2="matMenu">
                     <a href="javascript:void(0)" mat-menu-item>Show/Hide Archive  &nbsp;
-                      <mat-slide-toggle [(ngModel)]="isChecked"></mat-slide-toggle>
+                      <mat-slide-toggle></mat-slide-toggle>
                     </a>
                     <a href="javascript:void(0)" mat-menu-item>
                       Unsubscribed Recipients
@@ -139,7 +139,7 @@
                   </button>
                   <mat-menu #menu_2="matMenu">
                     <a href="javascript:void(0)" mat-menu-item>Show/Hide Archive  &nbsp;
-                      <mat-slide-toggle [(ngModel)]="isChecked"></mat-slide-toggle>
+                      <mat-slide-toggle></mat-slide-toggle>
                     </a>
                     <a href="javascript:void(0)" mat-menu-item>
                       Unsubscribed Recipients
@@ -232,7 +232,7 @@
                   </button>
                   <mat-menu #menu_3="matMenu">
                     <a href="javascript:void(0)" mat-menu-item>Show/Hide Archive  &nbsp;
-                      <mat-slide-toggle [(ngModel)]="isChecked"></mat-slide-toggle>
+                      <mat-slide-toggle></mat-slide-toggle>
                     </a>
                     <a href="javascript:void(0)" mat-menu-item>
                       Unsubscribed Recipients
