--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -45,7 +45,7 @@
             <li><a class="dropdown-item" [routerLink]="'/AdminProfile'"> <i class="far fa-user"></i> My Profile</a></li>
             <li><a class="dropdown-item" [routerLink]="'/FAQ'">  <i class="far fa-question-circle"></i> Help & Support</a></li>
             <li>
-              <a class="dropdown-item" (click)="logout($event)" href="#"> 
+              <a class="dropdown-item" (click)="logout()" href="#"> 
                 <svg xmlns="http://www.w3.org/2000/svg" width="16.598" height="16.598" viewBox="0 0 16.598 16.598">
                   <g id="Icon_feather-log-out" data-name="Icon feather-log-out" transform="translate(15.848 15.848) rotate(180)">
                     <path id="Path_192" data-name="Path 192" d="M5.033,15.1H1.678A1.678,1.678,0,0,1,0,13.421V1.678A1.678,1.678,0,0,1,1.678,0H5.033" transform="translate(0 0)" fill="none" stroke="#707070" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"/>
