--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -138,7 +138,7 @@
                 </button>
                 <mat-menu #menu="matMenu">
                   <a href="javascript:void(0)" mat-menu-item>Show/Hide Archive  &nbsp;
-                    <mat-slide-toggle [(ngModel)]="isChecked"></mat-slide-toggle>
+                    <mat-slide-toggle></mat-slide-toggle>
                   </a>
                 </mat-menu>
               </div>
