--- a/src/app/components/recipients/recipients.component.html
+++ b/src/app/components/recipients/recipients.component.html
@@ -71,9 +71,9 @@
                 </label>
                 <span>
                   <ng-container *ngIf="selectedFileName; else elseTemplate">{{selectedFileName}}</ng-container>
-                  <!-- <ng-template #elseTemplate>
+                  <ng-template #elseTemplate>
                     No file chosen
-                  </ng-template> -->
+                  </ng-template>
                 </span>
               </div>
   
@@ -124,9 +124,9 @@
                   <span>
                     <ng-container *ngIf="selectedFileName; else elseTemplate">{{selectedFileName}}
                     </ng-container>
-                    <!-- <ng-template #elseTemplate>
+                    <ng-template #elseTemplate>
                       No file chosen
-                    </ng-template> -->
+                    </ng-template>
                   </span>
                 </div>
               </div>
