--- a/src/app/components/jobs/jobs.component.html
+++ b/src/app/components/jobs/jobs.component.html
@@ -175,7 +175,7 @@
                   <tr mat-row *matRowDef="let row; columns: displayedColumnsJobs;"></tr>
                 </table>
 
-                <app-custom-pagination [page]="page" (nextPageEvent)="getNextPage()"
+                <app-custom-pagination (nextPageEvent)="getNextPage()"
                   (previousPageEvent)="getPreviousPage()">
                 </app-custom-pagination>
 
