--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -58,7 +58,7 @@
                         </div>
 
                         <div class="form-group mb-5">
-                            <button class="btn btn-block btn-orange-light btn-md" (click)="handleSubmit(loginForm)">
+                            <button class="btn btn-block btn-orange-light btn-md" (click)="handleSubmit()">
                                 {{step === 'login' ? 'Receive OTP' : 'Login'}}
                             </button>
                         </div>
