--- a/src/app/components/email-jobs/email-jobs.component.css
+++ b/src/app/components/email-jobs/email-jobs.component.css
@@ -35,7 +35,6 @@ a {
 .menu_dot_area{
   position: absolute;
   right: 0;
-  top: -55px;
   z-index: 10;
   border: 0;
   outline: none;
@@ -64,4 +63,11 @@ a {
 ::ng-deep mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
   background-color: #FF3A00 !important;
   opacity: 1;
+}
+
+.mat-group-content {
+  min-width: 1300px;
+}
+.mat-group-content table{
+  width: 100%;
 }
