--- a/src/app/components/jobs/jobs.component.css
+++ b/src/app/components/jobs/jobs.component.css
@@ -89,7 +89,7 @@ a.disabled {
 .menu_dot_area{
   position: absolute;
   right: 0;
-  top: -55px;
+  /* top: -55px; */
   z-index: 10;
   border: 0;
   outline: none;
@@ -122,4 +122,10 @@ a.disabled {
 
 ::ng-deep .mat-tab-body-wrapper{
     overflow: initial !important;
+}
+.mat-group-content {
+  min-width: 1300px;
+}
+.table-container table{
+  min-width: 100%;
 }
