--- a/src/app/components/tags/tags.component.css
+++ b/src/app/components/tags/tags.component.css
@@ -12,7 +12,7 @@ a {
 .add_button{
   position: absolute;
   right: 0;
-  margin-top: -75px;
+  /* margin-top: -75px; */
   z-index: 10;
   border: 0;
   outline: none;
@@ -20,4 +20,8 @@ a {
 
 ::ng-deep .mat-tab-label-container{
   margin-left: 0 !important;
+}
+
+.mat-group-content {
+  width: 1300px;
 }
