Update responsive issue old

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -68,7 +68,7 @@
               {{home.totalCertificatesReleasedThisMonth}}
             </div>
             <div class="icon-area text">
-              {{home.changeInRecipientsAddedThisMonth}}%
+             + {{home.changeInRecipientsAddedThisMonth}}%
             </div>
         </div>
       </mat-card>
@@ -81,7 +81,7 @@
               {{home.totalCertificatesReleasedThisMonth}}
             </div>
             <div class="icon-area text red">
-              {{home.changeInCertificatesReleasedThisMonth}}%
+             - {{home.changeInCertificatesReleasedThisMonth}}%
             </div>
         </div>
       </mat-card>
@@ -94,7 +94,7 @@
               {{home.totalEmailsSentThisMonth}}
             </div>
             <div class="icon-area text">
-              {{home.changeInEmailSentThisMonth}}%
+             + {{home.changeInEmailSentThisMonth}}%
             </div>
         </div>
       </mat-card>
