--- a/src/app/components/noauth-nav/noauth-nav.component.css
+++ b/src/app/components/noauth-nav/noauth-nav.component.css
@@ -132,7 +132,11 @@
 
 @media (min-width: 1093px) {
     .link_header .navbar-brand .logo {
-        left: 6em;
+        left: 2em;
+    }
+
+    .link_header .navbar-brand .logo img{
+        width: 10rem;
     }
 }
 
