--- a/src/app/components/tags/tags.component.css
+++ b/src/app/components/tags/tags.component.css
@@ -22,6 +22,11 @@ a {
   margin-left: 0 !important;
 }
 
-.mat-group-content {
-  width: 1300px;
-}
+
+
+@media (max-width: 1250px) {
+  .mat-group-content {
+    width: 1300px;
+  }
+} 
+
