--- a/src/styles.css
+++ b/src/styles.css
@@ -306,7 +306,7 @@ profile
 }
 
 .mat-group-content .mat-tab-body-content {
-  overflow: hidden !important;
+  overflow: unset !important;
   position: relative;
 }
 
@@ -487,6 +487,19 @@ profile
 
 }
 
+@media (max-width: 470px) {
+  .mat-dialog-container{
+    text-align: center;
+  }
+  
+  .mat-dialog-actions button{
+    width: 100% !important;
+    display: block;
+    margin: 5px 0;
+    text-align: center;
+  }
+} 
+
 
 /* Send Email and Admin Profile */
 .send-mail-heading {
@@ -639,7 +652,7 @@ login register page realted style
   background: #28293d15;
   display: inline-block !important;
   position: relative;
-  z-index: 100000 !important;
+  z-index: 1000 !important;
 }
 
 .mat-tab-labels{
@@ -662,7 +675,7 @@ login register page realted style
 }
 
 .mat-tab-body-wrapper{
-  /* overflow: initial !important; */
+  overflow: initial !important;
   margin-top: -60px;
   padding-top: 60px;
 }
@@ -675,10 +688,16 @@ login register page realted style
 }
 
 .mat-tab-body,
-.mat-tab-body.mat-tab-body-active,
+.mat-tab-body .mat-tab-body-active,
 .mat-group-content .mat-tab-body-content{
-   /* overflow: unset !important; */
+   overflow: auto  !important;
+   overflow-x: hidden  !important;
 }
+
+
+/* .mat-tab-body{
+   overflow: unset !important;
+} */
 
 .btn.back{
   position: absolute;
@@ -797,5 +816,13 @@ th[mat-sort-header] .mat-sort-header-stem
 
 
 .overflow-x-auto {
-  overflow-x: auto !important;
+  overflow-x: unset !important;
+}
+
+.overflow-x-auto.certificate_templates_wrap {
+  overflow-x: unset !important;
+}
+
+::ng-deep .mat-tab-header{
+  z-index: 10;
 }
