--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg link_header mb-5">
-  <div class="container-fluid">
+  <div class="container">
     <div class="navbar-brand">
       <a class="logo" [routerLink]="'/'">
         <img src="../../../assets/logo.svg" alt="">
